tests/valid/shadowing/shadow_linear_let_outer_consumed_ok.facet
fn f() -> unrestricted isize {
    let x: linear isize = 42;
    let x: linear isize = x;
    (drop x);
    100
}
