tests/invalid/borrow_conflict/linear_root_move_while_shared_borrowed.facet
fn f(x: linear isize) -> unrestricted () {
    let r: unrestricted &linear isize = (&x) in
    let y: linear isize = x in
    (drop y)
}
